force-app/main/default/objects/Unit_Inventory_Specifications__c/Unit_Inventory_Specifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Unit Inventory Specifications</label>
</CustomObject>