force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Available_Plot__c.field-meta.xml
<CustomField>
    <fullName>Available_Plot__c</fullName>
    <description>Color of Available Plot, Value should be in HEX</description>
    <label>Available Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>