force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Blocked_Plot__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Plot__c</fullName>
    <description>Color of Blocked Plot, Value should be in HEX</description>
    <label>Blocked Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>