force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Booked_Plot__c.field-meta.xml
<CustomField>
    <fullName>Booked_Plot__c</fullName>
    <description>Color of Booked Plot, Value should be in HEX</description>
    <label>Booked Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>