force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Garden__c.field-meta.xml
<CustomField>
    <fullName>Garden__c</fullName>
    <description>Color of Garden, Value should be in HEX</description>
    <label>Garden</label>
    <length>10</length>
    <type>Text</type>
</CustomField>