force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Cell Height</description>
    <label>Height</label>
    <length>5</length>
    <type>Text</type>
</CustomField>