force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Hold_Plot__c.field-meta.xml
<CustomField>
    <fullName>Hold_Plot__c</fullName>
    <description>Color of Hold Plot, Value should be in HEX</description>
    <label>Hold Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>