force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Management_Blocked_Plot__c.field-meta.xml
<CustomField>
    <fullName>Management_Blocked_Plot__c</fullName>
    <description>Color of Management Blocked Plot, Value should be in HEX</description>
    <label>Management Blocked Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>