force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Mortgage_Plot__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Plot__c</fullName>
    <description>Color of Mortgage Plot, Value should be in HEX</description>
    <label>Mortgage Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>