force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Multi_Select_Color__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Color__c</fullName>
    <label>Multi Select Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>