force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Not_For_Sale_Plot__c.field-meta.xml
<CustomField>
    <fullName>Not_For_Sale_Plot__c</fullName>
    <description>Color of Not For Sale Plot, Value should be in HEX</description>
    <label>Not For Sale Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>