force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Registered_Plot__c.field-meta.xml
<CustomField>
    <fullName>Registered_Plot__c</fullName>
    <description>Color of Registered Plot, Value should be in HEX</description>
    <label>Registered Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>