force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Road__c.field-meta.xml
<CustomField>
    <fullName>Road__c</fullName>
    <description>Color of Road, Value should be in HEX</description>
    <label>Road</label>
    <length>10</length>
    <type>Text</type>
</CustomField>