force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Sold_Plot__c.field-meta.xml
<CustomField>
    <fullName>Sold_Plot__c</fullName>
    <description>Color of Sold Plot, Value should be in HEX</description>
    <label>Sold Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>