force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Temp_Blocked_Plot__c.field-meta.xml
<CustomField>
    <fullName>Temp_Blocked_Plot__c</fullName>
    <description>Color of Temp Blocked Plot, Value should be in HEX</description>
    <label>Temp Blocked Plot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>