force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Toggle_Options__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Options__c</fullName>
    <label>Toggle Options</label>
    <type>TextArea</type>
</CustomField>