force-app/main/default/objects/Unit_Inventory_Specifications__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Cell Width</description>
    <label>Width</label>
    <length>5</length>
    <type>Text</type>
</CustomField>